@@ -6,6 +6,7 @@ MovieJukebox 1.0.15 beta
 ------------------------
   - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
   - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
+  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
   - Enhancement  #343 Allowing prebuf to be set
   - Fixed defect #352 Fanart not being resized
   - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
